Arreglos en el manejo de errores del back
